Updated link to publications

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
               <a href="https://t.co/2sUoQTkKv8">https://t.co/2sUoQTkKv8</a>
             </td>
             <td>
-              <a href="https://twitter.com/_setuid0_">https://twitter.com/_setuid0_</a>
+              <a href="https://github.com/setuid0-sec/Swiss_E-Voting_Publications">https://github.com/setuid0-sec/Swiss_E-Voting_Publications</a>
             </td>
           </tr>
         </tbody>
