--- a/index.html
+++ b/index.html
@@ -55,12 +55,21 @@
               <a href="https://github.com/setuid0-sec/Swiss_E-Voting_Publications">https://github.com/setuid0-sec/Swiss_E-Voting_Publications</a>
             </td>
           </tr>
+         <tr>
+            <td>2</td>
+            <td>Getting the name up!</td>
+            <td>Post PIT 2k19</td>
+            <td>
+              <a href="https://dai.ly/x740nyw">https://dai.ly/x740nyw</a>
+            </td>
+            <td>
+              <a href="https://github.com/setuid0-sec/Swiss_E-Voting_Publications">https://github.com/setuid0-sec/Swiss_E-Voting_Publications</a>
+            </td>
+          </tr>
         </tbody>
       </table>
     </div>
 
   </center>
-
-
 </body>
 </html>
