--- a/research.html
+++ b/research.html
@@ -19,17 +19,17 @@
 	
 	<div id="releases">
 	<h1>Vulnerability Releases</h1>
-	<p>In an increasingly connected world, vulnerabilities are everpresent.
+	<p>In an increasingly <b>connected</b> world, vulnerabilities are everpresent.
 	</br>
-	Our goal is to find high-impact vulnerabilities in widely deployed products to protect millions of people.
+	Our goal is to find <b>high-impact</b> vulnerabilities in <b>widely deployed</b> products to protect millions of people.
 	</br>
 	Below you'll find a list of selected security vulnerabilities we've discovered:
 	</p>
 		
 	<h2>Electronic Voting Systems</h2>
-	<p>E-Voting Systems are vital for the functioning of a safe, resiliant democracy.
+	<p><b>Secure</b> E-Voting Systems are <b>vital</b> for the functioning of a safe, resiliant democracy.
 	</br>
-	By discovering electronic voting system vulnerabilities we were able to save millions of humans from loss of trust in the government, riots and voting manipulation
+	By discovering electronic voting system vulnerabilities we were able to save <b>millions</b> of humans from loss of trust in the government, riots and voting manipulation
 	</p>
 
 	<table>
@@ -56,6 +56,26 @@
 	<td>Scytl Secure Vote (sVote)</td>
 	<td>OrientDB Password</td>
 	</tr>
+	<tr>
+	<td><a href="research/SUID-2019-00001.html">SUID-2019-00001</a></td>
+	<td>Scytl Secure Vote (sVote)</td>
+	<td>Jackson-Databind RCE</td>
+	</tr>
+	<tr>
+	<td><a href="research/SUID-2019-00002.html">SUID-2019-00002</a></td>
+	<td>Scytl Secure Vote (sVote)</td>
+	<td>XSS</td>
+	</tr>
+	<tr>
+	<td><a href="research/SUID-2019-00003.html">SUID-2019-00003</a></td>
+	<td>Scytl Secure Vote (sVote)</td>
+	<td>XXE</td>
+	</tr>
+	<tr>
+	<td><a href="research/SUID-2019-00004.html">SUID-2019-00004</a></td>
+	<td>Scytl Secure Vote (sVote)</td>
+	<td>Hardcoded PKCS12 Passwords</td>
+	</tr>
 	</table>
 
 
@@ -63,13 +83,26 @@
 	<h2>Routers</h2>
 	<p>Routers are critical embedded systems. 
 	</br>
-	Exploits not only target a single system but can be abused to penetrate entire networks. 
+	Exploits not only target a single system but can be abused to penetrate <b>entire networks</b>. 
 	</br>
-	Our work has helped major network vendors secure massive customerbases.
+	Our work has helped major network vendors secure <b>massive</b> customerbases.
 	</p>
-	<ul>
-		<li>To be disclosed soon</li>
-	</ul>
+	
+	<table>
+	<th>ID</th>
+	<th>Product</th>
+	<th>Vulnerability</th>
+	<tr>
+	<td><a href="research/DAP-2020_Preauth_RCE_Chain.html">CVE-2021-27249</a></td>
+	<td>D-Link DAP-2020</td>
+	<td>Command Injection RCE</td>
+	</tr>
+	<tr>
+	<td><a href="research/DAP-2020_Preauth_RCE_Chain.html">CVE-2021-27250</a></td>
+	<td>D-Link DAP-2020</td>
+	<td>Arbitrary File Read</td>
+	</tr>
+	</table>
 	
 	<h2>Your Product?</h2>
 	<p>If you want a thourough, fast and discreet security audit of your product get in contact with us!</p>
