--- a/about.html
+++ b/about.html
@@ -21,8 +21,8 @@
 	<h1>The Team</h1>
 	
 	<ul>
-	<li>Jannis Kirschner - k i w i [ a t ] s u i d . c h</li>
-	<li>Anthony Schneiter - m u f f i n x [ a t ] s u i d . c h</li>
+	<li>Jannis Kirschner - k i w i [ a t ] s u i d . c h <a href="https://www.linkedin.com/in/janniskirschner/">LinkedIn</a> <a href="http://twitter.com/xorkiwi">Twitter</a></li>
+	<li>Anthony Schneiter - m u f f i n x [ a t ] s u i d . c h  <a href="https://twitter.com/_muffinx">Twitter</a></li>
 	<li>Carlo Field - e o c 1 p h e r [ a t ] s u i d . c h</li>
 	</ul>
 	
