--- a/research/DAP-2020_Preauth_RCE_Chain.html
+++ b/research/DAP-2020_Preauth_RCE_Chain.html
@@ -1,4 +1,4 @@
-<html>
+﻿<html>
 
 	<head>
 		<link rel="shortcut icon" href="../favicon.ico">
@@ -468,7 +468,7 @@ Sat Jan  1 20:59:16 CCT 2011
 	<li>Aug  30, 2020 - Sold vulnerabilities (27249 & 27250) to ZDI</li>
 	<li>Aug  30, 2020 - Sold vulnerabilities (27249 & 27250) to ZDI</li>
 	<li>Sep  08, 2020 - ZDI reported vulnerability to vendor</li>
-	<li>Feb  24, 2020 - Coordinated public release of advisory</li>
+	<li>Feb  24, 2021 - Coordinated public release of advisory</li>
 	</ul>
 	<h1>Credit</h1>
 	<p>Jannis Kirschner & Anthony Schneiter from Team SUID</p>
