--- a/research.html
+++ b/research.html
@@ -112,11 +112,11 @@
 	<table>
 	<th>ID</th>
 	<th>Type</th>
-	<th>Malware<th>
+	<th>Malware</th>
 	<tr>
 	<td>SMAL-2021-00001</td>
 	<td>Spyware/Malvertising</td>
-	<td><a href="research/Telegram_Malware_Analysis.html.html">Telegram Malvertising Campaign (March 2021)</a></td>
+	<td><a href="research/Telegram_Malware_Analysis.html">Telegram Malvertising Campaign (March 2021)</a></td>
 	</tr>
 	</table>
 	
