--- a/research.html
+++ b/research.html
@@ -105,7 +105,7 @@
 	</table>
 	
 	<h2>Malware Analysis</h2>
-	<p>Attacks via Malware are omnipresent and are impacting million of lives</b>
+	<p>Attacks via Malware are omnipresent and are impacting million of lives.</br>
 	We are committed to analyze and disrupt active malware campaigns.
 	</p>
 	
